techweek-app-code/techweek-app-code-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techweek-app-code
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: techweek-app-code
