techweek-app-code/techweek-app-code-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  name: techweek-app-code
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: techweek-app-code
            port:
              number: 80
        path: /
        pathType: Prefix
